--- a/src/config/menu.config.json
+++ b/src/config/menu.config.json
@@ -26,9 +26,9 @@
   "isParentMenu":false,
   "parentMenuCode":"wechat"
 },{
-  "menuName":"渠道用户统计",
-  "menuCode":"channelUsers",
-  "menuResource":"channelUsers",
+  "menuName":"关注公众号后消息",
+  "menuCode":"messageForWxFollow",
+  "menuResource":"messageForWxFollow",
   "sequence":0,
   "isParentMenu":false,
   "parentMenuCode":"wechat"
