--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
+    "element-ui": "^2.3.8",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vux": "^2.9.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
